--- a/index.html
+++ b/index.html
@@ -4,10 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="estilos.css">
+    <title>Categorias</title>
 </head>
 <body>
-    <h1>HOLA MUNDO</h1>
-    
+    <h1>BIENVENIDOS A LA PAGINA WEB</h1>
+    <div class = "hola">Imagenes random: </div>
+    <h4>Primera imagen</h4>
+    <img src="hola.jpg" alt="user"width="180px">
+    <div class = "arbol">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis, quam obcaecati cumque laudantium delectus totam ipsum odio unde sequi dicta harum nulla consequatur vitae facilis ipsam. Perferendis esse quae a!
+    </div>
+    <span class = "mundo">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Officiis quam quo nulla aliquam? Totam delectus eius distinctio rerum dolore veritatis quae, quod repudiandae, eaque cumque provident, ea earum sit voluptas.</span>
 </body>
+<div>
+
+</div>
 </html>
